--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,13 +1,15 @@
- <h1>Save any kind of movies</h1>
+ <div class="container mt-3">
+  <h1>Save any kind of movies</h1>
 
-<h3>My Lists</h3>
-<div class="row">
-  <% @lists.each do |list| %>
-    <div>
-      <%= link_to list_path(list) do %>
-        <%= list.name %>
-      <% end %>
-    </div>
-  <% end %>
+  <h3>My Lists</h3>
+  <div class="row">
+    <% @lists.each do |list| %>
+      <div>
+        <%= link_to list_path(list) do %>
+          <%= list.name %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+  <%= link_to "Add a new list", new_list_path, class: 'btn btn-primary mt-3' %>
 </div>
-<%= link_to "Add a new list", new_list_path, class: 'btn btn-primary mt-3' %>
