--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,5 @@
- <div class="container mt-3">
+ <div class="container">
   <h1>Save any kind of movies</h1>
-
   <h3>My Lists</h3>
   <div class="row">
     <% @lists.each do |list| %>
