--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,4 +1,12 @@
-<h1>New List</h1>
+<div ="container mt-3">
+  <div class="d-flex mt-4 justify-content-center">
+    <div class="row">
+      <h1>New List</h1>
+      <%= simple_form_for @list do |f| %>
+          <%= f.input :name, placeholder: "Enter a list name" %>
+      <% end %>
 
-
-<%= link_to "Back to list", lists_path, :class => 'btn btn-secondary mt-3' %>
+      <%= link_to "Back to list", lists_path, :class => 'btn btn-secondary mt-3' %>
+    </div>
+  </div>
+</div>
