--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -9,10 +9,11 @@
   <div class="d-flex justify-content-between my-4">
     <span class="mb-2 d-block"><small><em class="text-muted"><%= "You haven't saved any movies yet!" if @list.movies.empty? %></em></small></span>
     <div>
-      <button type="button" class="btn btn-flat" data-bs-toggle="modal" data-bs-target="#new_movie_modal">
+      <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#new_movie_modal">
         add a movie
       </button>
-      <%= link_to "delete this list", list_path(@list), method: :delete, class: "btn btn-cancel", data: { confirm: "Are you sure you want to delete this list?" } %>
+      <%= link_to "delete this list", list_path(@list), method: :delete, class: "btn btn-secondary", data: { confirm: "Are you sure you want to delete this list?" } %>
+      <%= link_to "Back to list overview", lists_path, :class => 'btn btn-primary' %>
     </div>
   </div>
   <div class="row">
